--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,6 @@
-@import url("./style/atomic.css");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html {
   box-sizing: border-box;
