--- a/src/style.css
+++ b/src/style.css
@@ -10,9 +10,7 @@ html {
 
 body {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
+  flex-direction: column;
   width: 100%;
-  height: 100dvh;
+  min-height: 100dvh;
 }
