--- a/src/style.css
+++ b/src/style.css
@@ -12,5 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
+  max-width: 1400px;
   min-height: 100dvh;
+  margin: 0 auto;
 }
